# MonkeyTyper

./: CMakeLists.txt  Game.cpp  Game.h  README.md  Word.cpp  Word.h  main.cpp
components/: score.txt
